got a header and some text. Just getting started

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
-  <!-- <h1>Jackson Duhon</h1> -->
+  <div id="myContainer"></div>
+  <header>
+    <ul>
+      <li><a class="white-text" href="#">Home</a></li>
+      <li><a class="white-text" href="#">Projects</a></li>
+      <li><a class="white-text" href="#">Resume</a></li>
+      <li><a class="white-text" href="#">Contact</a></li>
+    </ul>
+  </header>
+  <h1 class="white-text">Jackson Duhon</h1>
+  <h2 class="white-text">Web Developer<br>and<br>Digital Artist</h2>
 
 </body>
 </html>
