adjusted canvas animation, got text to sit on top of canvas nicely

--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
   <div id="myContainer"></div>
   <header>
     <ul>
-      <li><a class="white-text" href="#">Home</a></li>
-      <li><a class="white-text" href="#">Projects</a></li>
-      <li><a class="white-text" href="#">Resume</a></li>
-      <li><a class="white-text" href="#">Contact</a></li>
+      <li><a class="white-text spaced" href="#">Home</a></li>
+      <li><a class="white-text spaced" href="#">Projects</a></li>
+      <li><a class="white-text spaced" href="#">Resume</a></li>
+      <li><a class="white-text spaced" href="#">Contact</a></li>
     </ul>
   </header>
-  <h1 class="white-text">Jackson Duhon</h1>
-  <h2 class="white-text">Web Developer<br>and<br>Digital Artist</h2>
-
+  <div id="titleDiv">
+    <h1 class="white-text title">Jackson Duhon</h1>
+    <h2 class="white-text title">Web Developer<br>and<br>Digital Artist</h2>
+  </div>
+  <section class="about">
+    <h1>About Me:</h1>
+  </section>
 </body>
 </html>
