formatted central image, changed about section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,24 @@
   </div>
   <section class="about">
     <h1>About Me:</h1>
-    <hr>
     <div id="borderbox">
       <img id="profilepic" src="images/profilepic.jpg">
     </div>
-    <div id="profiletext">
-      <p>Jackson Duhon is a Seattle based full-stack web developer and digital artist. Jackson grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. In 2015 Jackson received a degree from the Music Technology, Interaction, Intelligence, and Design program at the California Institute of the Arts, which is where he first discovered his love of coding and being surrounded by creative weirdos. Jackson recently finished a web development immersive course at General Assembly and is looking for new opportunities in the Seattle tech sector. Jackson's a pretty cool dude, everyone says so.</p>
-    </div>
+    <article id="profiletext">
+      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can eat food from the sea whenever I’m not building cool stuff with computers.</p>
+    </article>
+  </section>
+  <hr>
+  <section>
+    <h1>Projects</h1>
+  </section>
+  <hr>
+  <section>
+    <h1>Skills</h1>
+  </section>
+  <hr>
+  <section>
+    <h1>Contact</h1>
   </section>
 </body>
 </html>
