--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Jackson Duhon</title>
-
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="libraries/p5.js" type="text/javascript"></script>
   <script src="script.js" type="text/javascript"></script>
@@ -25,7 +24,7 @@
   <section class="about">
     <h1>About Me:</h1>
     <div id="borderbox">
-      <img id="profilepic" src="images/profilepic.jpg">
+      <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
     <article id="profiletext">
       <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can eat food from the sea whenever I’m not building cool stuff with computers.</p>
@@ -34,6 +33,52 @@
   <hr>
   <section>
     <h1>Projects</h1>
+    <section id="project1">
+      <div class="project">
+        <h2>Euclid</h2>
+        <a href="https://dddotcom.github.io/twt/" target="_blank">
+          <img class="laptop" alt="the Euclid interface" src="./imgs/euclid.png">
+        </a>
+        <p class="project-desc">
+          <span class="important-text">Contributors:</span> 
+          Miguel Pou
+          <br><br>
+          <span class="important-text">What is it?</span> 
+          A front end <a href="#">FM Synthesizer</a> Allows the user to create generative compositions using just the browser.
+          <br><br>
+          <span class="important-text">Technologies:</span> 
+          HTML, CSS, Javascript, Web Audio API <a href="#">P5.js</a>
+          <br><br>
+          <span class="important-text">My role:</span>
+          Sound Design, Sound Sythesis, Instrument Design.
+          <br><br>
+          <a href="#">Insert project link and github link here</a>
+        </p>
+      </div>
+    </section>
+    <section id="project2">
+      <div class="project">
+        <h2>Artemis</h2>
+        <a href="#" target="_blank">
+          <img class="laptop" alt="Artemis Front Page" src="./imgs/artemis.png">
+        </a>
+        <p class="project-desc">
+          <span class="important-text">Contributors:</span> 
+          Miguel Pou, Leo Burke, Kemal Degar
+          <br><br>
+          <span class="important-text">What is it?</span> 
+          A full stack web application that helps you keep track of all the applications you’re sending during a job search. Won first place in the General Assembly 24 Hour MEAN stack Hackathon
+          <br><br>
+          <span class="important-text">Technologies:</span> 
+          MongoDB, Angular, Node.js <a href="#">P5.js</a>
+          <br><br>
+          <span class="important-text">My role:</span>
+          Authentication, Authorization, Models, Controllers, Deployment.
+          <br><br>
+          <a href="#">Insert project link and github link here</a>
+        </p>
+      </div>
+    </section>
   </section>
   <hr>
   <section>
