added some color ideas, no biggie

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </article>
   </section>
   <hr>
-  <section>
+  <section id="projects-section">
     <h1>Projects</h1>
     <section id="project1">
       <div class="project">
@@ -67,7 +67,7 @@
           Miguel Pou, Leo Burke, Kemal Degar
           <br><br>
           <span class="important-text">What is it?</span> 
-          A full stack web application that helps you keep track of all the applications you’re sending during a job search. Won first place in the General Assembly 24 Hour MEAN stack Hackathon
+          A full stack web application that helps you keep track of all the applications you’re sending during a job search. <br>Won first place in the General Assembly 24 Hour MEAN stack Hackathon
           <br><br>
           <span class="important-text">Technologies:</span> 
           MongoDB, Angular, Node.js <a href="#">P5.js</a>
