added some more content to projects section

--- a/index.html
+++ b/index.html
@@ -67,13 +67,54 @@
           Miguel Pou, Leo Burke, Kemal Degar
           <br><br>
           <span class="important-text">What is it?</span> 
-          A full stack web application that helps you keep track of all the applications you’re sending during a job search. <br>Won first place in the General Assembly 24 Hour MEAN stack Hackathon
+          A full stack web application that helps you keep track of job applications. <br>Won first place in the General Assembly 24 Hour MEAN stack Hackathon
           <br><br>
           <span class="important-text">Technologies:</span> 
           MongoDB, Angular, Node.js <a href="#">P5.js</a>
           <br><br>
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Controllers, Deployment.
+          <br><br>
+          <a href="#">Insert project link and github link here</a>
+        </p>
+      </div>
+    </section>
+    <section id="project3">
+      <div class="project">
+        <h2>Accio-Bike</h2>
+        <a href="#" target="_blank">
+          <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
+        </a>
+        <p class="project-desc">
+          <span class="important-text">Contributors:</span> 
+          Zoe, Kemal, Chris
+          <br><br>
+          <span class="important-text">What is it?</span> 
+          A full stack web application for storing information about your bike <br>and web crawling through Craigslist to help find it if it is stolen.
+          <br><br>
+          <span class="important-text">Technologies:</span> 
+          Ruby on Rails, PostgresQL, Nokogiri
+          <br><br>
+          <span class="important-text">My role:</span>
+          Authentication, Authorization, Models, Web Scraping.
+          <br><br>
+          <a href="#">Insert project link and github link here</a>
+        </p>
+      </div>
+    </section>
+    <section id="project4">
+      <div class="project">
+        <h2>Code Pen</h2>
+        <a href="#" target="_blank">
+          <img class="laptop" alt="I ain't got no face" src="./imgs/headless-profile-pic.png">
+        </a>
+        <p class="project-desc">
+          <span class="important-text">What is it?</span> 
+          This is my Code Pen. It's where I doodle out ideas and keep some of my animations.
+          <br><br>
+          <span class="important-text">Technologies:</span> 
+          I mostly do canvas animations in Code Pen.
+          <br><br>
           <br><br>
           <a href="#">Insert project link and github link here</a>
         </p>
