blergle dergle doooooo

--- a/index.html
+++ b/index.html
@@ -122,8 +122,41 @@
     </section>
   </section>
   <hr>
-  <section>
+  <section id="skillz-section">
     <h1>Skills</h1>
+    <div class="skillz-div">
+      <span class="important-text">Front End</span> 
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Javascript</li>
+            <li>jQuery</li>
+            <li>Angular 1.6</li>
+            <li>ReactJS</li>
+          </ul>
+    </div>
+    <div class="skillz-div">
+      <span class="important-text">Back End</span> 
+          <ul>
+            <li>NodeJS</li>
+            <li>Ruby on Rails</li>
+            <li>Meteor</li>
+            <li>PostgresQL</li>
+            <li>Active Record</li>
+            <li>MongoDB</li>
+          </ul>
+    </div>
+    <div class="skillz-div">
+      <span class="important-text">Misc</span> 
+          <ul>
+            <li>P5.js</li>
+            <li>RESTful APIs</li>
+            <li>AJAX</li>
+            <li>Web Scraping</li>
+            <li>Sound Synthesis</li>
+            <li>Audio Engineering</li>
+          </ul>
+    </div>
   </section>
   <hr>
   <section>
