added some contact bidness

--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
   <hr>
   <section>
     <h1>Contact</h1>
+    <p>jackson_duhon@yahoo.com</p>
+    <a href="#">Github</a>
+    <a href="#">resume</a>
+    <a href="#">codepen</a>
   </section>
 </body>
 </html>
