added URLs for projects

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="project1">
       <div class="project">
         <h2>Euclid</h2>
-        <a href="https://dddotcom.github.io/twt/" target="_blank">
+        <a href="https://miguelapou.github.io/Euclid/" target="_blank">
           <img class="laptop" alt="the Euclid interface" src="./imgs/euclid.png">
         </a>
         <p class="project-desc">
@@ -59,7 +59,7 @@
     <section id="project2">
       <div class="project">
         <h2>Artemis</h2>
-        <a href="#" target="_blank">
+        <a href="http://artemistracker.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Artemis Front Page" src="./imgs/artemis.png">
         </a>
         <p class="project-desc">
@@ -82,7 +82,7 @@
     <section id="project3">
       <div class="project">
         <h2>Accio-Bike</h2>
-        <a href="#" target="_blank">
+        <a href="https://accio-bike.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
         </a>
         <p class="project-desc">
@@ -105,7 +105,7 @@
     <section id="project4">
       <div class="project">
         <h2>Code Pen</h2>
-        <a href="#" target="_blank">
+        <a href="https://codepen.io/shway250/" target="_blank">
           <img class="laptop" alt="I ain't got no face" src="./imgs/headless-profile-pic.png">
         </a>
         <p class="project-desc">
@@ -131,8 +131,8 @@
             <li>CSS3</li>
             <li>Javascript</li>
             <li>jQuery</li>
-            <li>Angular 1.6</li>
-            <li>ReactJS</li>
+            <li>Angular</li>
+            <li>React</li>
           </ul>
     </div>
     <div class="skillz-div">
