added github repo links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
           <span class="important-text">My role:</span>
           Sound Design, Sound Sythesis, Instrument Design.
           <br><br>
-          <a href="#">Insert project link and github link here</a>
+          <a href="https://miguelapou.github.io/Euclid/">Project Link</a>
+          <a href="https://github.com/shway250/Euclid">Github Repo</a>
         </p>
       </div>
     </section>
@@ -70,12 +71,13 @@
           A full stack web application that helps you keep track of job applications. <br>Won first place in the General Assembly 24 Hour MEAN stack Hackathon
           <br><br>
           <span class="important-text">Technologies:</span> 
-          MongoDB, Angular, Node.js <a href="#">P5.js</a>
+          MongoDB, Angular, Node.js <a href="https://p5js.org/">P5.js</a>
           <br><br>
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Controllers, Deployment.
           <br><br>
-          <a href="#">Insert project link and github link here</a>
+          <a href="http://artemistracker.herokuapp.com/">Project Link</a>
+          <a href="https://github.com/shway250/artemis">Github Repo</a>
         </p>
       </div>
     </section>
@@ -98,7 +100,8 @@
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Web Scraping.
           <br><br>
-          <a href="#">Insert project link and github link here</a>
+          <a href="https://accio-bike.herokuapp.com/">Project Link</a>
+          <a href="https://github.com/shway250/acciobike2">Github Repo</a>
         </p>
       </div>
     </section>
@@ -116,7 +119,8 @@
           I mostly do canvas animations in Code Pen.
           <br><br>
           <br><br>
-          <a href="#">Insert project link and github link here</a>
+          <a href="https://codepen.io/shway250/">My Code Pen</a>
+          
         </p>
       </div>
     </section>
@@ -162,9 +166,9 @@
   <section>
     <h1>Contact</h1>
     <p>jackson_duhon@yahoo.com</p>
-    <a href="#">Github</a>
+    <a href="https://github.com/shway250">Github</a>
     <a href="#">resume</a>
-    <a href="#">codepen</a>
+    <a href="https://www.linkedin.com/in/jackson-duhon/">LinkedIn</a>
   </section>
 </body>
 </html>
