--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>Jackson Duhon</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="libraries/p5.js" type="text/javascript"></script>
+  <script src="libraries/p5.js" type="text/javascript"></script> <!-- P5 script -->
+  <script src="https://use.fontawesome.com/68798e7039.js"></script><!-- Font Awesome Script -->
   <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
@@ -44,16 +45,16 @@
           Miguel Pou
           <br><br>
           <span class="important-text">What is it?</span> 
-          A front end <a href="#">FM Synthesizer</a> Allows the user to create generative compositions using just the browser.
+          A front end <a href="https://en.wikipedia.org/wiki/Frequency_modulation_synthesis">FM Synthesizer</a> Allows the user to create generative compositions using just the browser.
           <br><br>
           <span class="important-text">Technologies:</span> 
-          HTML, CSS, Javascript, Web Audio API <a href="#">P5.js</a>
+          HTML, CSS, Javascript, Web Audio API, <a href="https://p5js.org/">P5.js</a>
           <br><br>
           <span class="important-text">My role:</span>
           Sound Design, Sound Sythesis, Instrument Design.
           <br><br>
-          <a href="https://miguelapou.github.io/Euclid/">Project Link</a>
-          <a href="https://github.com/shway250/Euclid">Github Repo</a>
+          <a href="https://miguelapou.github.io/Euclid/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
+          <a href="https://github.com/shway250/Euclid"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
         </p>
       </div>
     </section>
@@ -71,13 +72,13 @@
           A full stack web application that helps you keep track of job applications. <br>Won first place in the General Assembly 24 Hour MEAN stack Hackathon
           <br><br>
           <span class="important-text">Technologies:</span> 
-          MongoDB, Angular, Node.js <a href="https://p5js.org/">P5.js</a>
+          MongoDB, Angular, Express, Node.js
           <br><br>
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Controllers, Deployment.
           <br><br>
-          <a href="http://artemistracker.herokuapp.com/">Project Link</a>
-          <a href="https://github.com/shway250/artemis">Github Repo</a>
+          <a href="http://artemistracker.herokuapp.com/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
+          <a href="https://github.com/shway250/artemis"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
         </p>
       </div>
     </section>
@@ -100,8 +101,8 @@
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Web Scraping.
           <br><br>
-          <a href="https://accio-bike.herokuapp.com/">Project Link</a>
-          <a href="https://github.com/shway250/acciobike2">Github Repo</a>
+          <a href="https://accio-bike.herokuapp.com/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
+          <a href="https://github.com/shway250/acciobike2"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
         </p>
       </div>
     </section>
@@ -119,7 +120,8 @@
           I mostly do canvas animations in Code Pen.
           <br><br>
           <br><br>
-          <a href="https://codepen.io/shway250/">My Code Pen</a>
+          <a href="https://codepen.io/shway250/"><i class="fa fa-4x fa-codepen" aria-hidden="true"></i>
+</a>
           
         </p>
       </div>
@@ -166,9 +168,10 @@
   <section>
     <h1>Contact</h1>
     <p>jackson_duhon@yahoo.com</p>
-    <a href="https://github.com/shway250">Github</a>
-    <a href="#">resume</a>
-    <a href="https://www.linkedin.com/in/jackson-duhon/">LinkedIn</a>
+    <a href="https://github.com/shway250"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
+    <a href="#"><i class="fa fa-4x fa-file-text" aria-hidden="true"></i></a>
+    <a href="https://www.linkedin.com/in/jackson-duhon/"><i class="fa fa-4x fa-linkedin-square" aria-hidden="true"></i>
+</a>
   </section>
 </body>
 </html>
