added cal pal bidness

--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
         </p>
       </div>
     </section>
+    <section id="project5">
+      <div class="project">
+        <h2>Cal Pal</h2>
+        <a href="#" target="_blank">
+          <img class="laptop" alt="Cal Pal Icon" src="#">
+        </a>
+        <p class="project-desc">
+          <span class="important-text">Contributors:</span> 
+          Annelisse Smith, Reno McKenzie, Etc...
+          <br><br>
+          <span class="important-text">What is it?</span> 
+          A deployed Alexa app that helps you make good nutritional decisions <br>Won first place in the General Assembly Amazon Alexa Hackathon
+          <br><br>
+          <span class="important-text">Technologies:</span> 
+          Node.js, AWS, Etc....
+          <br><br>
+          <span class="important-text">My role:</span>
+          Backend developement
+          <br><br>
+          <a href="#"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
+        </p>
+      </div>
+    </section>
     <section id="project2">
       <div class="project">
         <h2>Artemis</h2>
