--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Jackson Duhon</title>
+<link href="https://fonts.googleapis.com/css?family=Lato:400,900|Oswald:400,600" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="libraries/p5.js" type="text/javascript"></script> <!-- P5 script -->
   <script src="https://use.fontawesome.com/68798e7039.js"></script><!-- Font Awesome Script -->
@@ -154,7 +155,7 @@
   <hr>
   <section id="skillz-section">
     <h1>Skills</h1>
-    <div class="skillz-div">
+    <div class="skillz-div circle">
       <span class="important-text">Front End</span> 
           <ul>
             <li>HTML5</li>
@@ -165,7 +166,7 @@
             <li>React</li>
           </ul>
     </div>
-    <div class="skillz-div">
+    <div class="skillz-div circle">
       <span class="important-text">Back End</span> 
           <ul>
             <li>NodeJS</li>
@@ -176,7 +177,7 @@
             <li>MongoDB</li>
           </ul>
     </div>
-    <div class="skillz-div">
+    <div class="skillz-div circle">
       <span class="important-text">Misc</span> 
           <ul>
             <li>P5.js</li>
