centered list items

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <section id="skillz-section">
     <h1>Skills</h1>
     <div class="skillz-div circle">
-      <span class="important-text">Front End</span> 
+      <span class="important-text list-text">Front End</span> 
           <ul>
             <li>HTML5</li>
             <li>CSS3</li>
@@ -167,7 +167,7 @@
           </ul>
     </div>
     <div class="skillz-div circle">
-      <span class="important-text">Back End</span> 
+      <span class="important-text list-text">Back End</span> 
           <ul>
             <li>NodeJS</li>
             <li>Ruby on Rails</li>
@@ -178,7 +178,7 @@
           </ul>
     </div>
     <div class="skillz-div circle">
-      <span class="important-text">Misc</span> 
+      <span class="important-text list-text">Misc</span> 
           <ul>
             <li>P5.js</li>
             <li>RESTful APIs</li>
