added cal pal image and project site

--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
     <section id="project5">
       <div class="project">
         <h2>Cal Pal</h2>
-        <a href="#" target="_blank">
-          <img class="laptop" alt="Cal Pal Icon" src="#">
+        <a href="http://bestuxdesignerever.com/cs_calpal.html" target="_blank">
+          <img class="laptop" alt="Cal Pal Icon" src="./imgs/cp_casestudy.png">
         </a>
         <p class="project-desc">
           <span class="important-text">Contributors:</span> 
-          Annelisse Smith, Reno McKenzie, Etc...
+          Annelisse Smith, Reno McKenzie,
           <br><br>
           <span class="important-text">What is it?</span> 
-          A deployed Alexa app that helps you make good nutritional decisions <br>Won first place in the General Assembly Amazon Alexa Hackathon
+          A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.<br> The project link below is a write up by the UX Designer I worked with for this project.
           <br><br>
           <span class="important-text">Technologies:</span> 
-          Node.js, AWS, Etc....
+          Node.js, AWS
           <br><br>
           <span class="important-text">My role:</span>
-          Backend developement
+          Backend developement, Natural Language Processing
           <br><br>
-          <a href="#"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
+          <a href="http://bestuxdesignerever.com/cs_calpal.html"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
+          <!-- <a href="#"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a> -->
         </p>
       </div>
     </section>
