fixed contact section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 class="white-text title">Web Developer<br>and<br>Digital Artist</h2>
   </div>
   <section class="about">
-    <h1>About Me:</h1>
+    <h1>About Me</h1>
     <div id="borderbox">
       <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
@@ -67,7 +67,7 @@
         </a>
         <p class="project-desc">
           <span class="important-text">Contributors:</span> 
-          Annelisse Smith, Reno McKenzie,
+          Annelisse Smith, Reno McKenzie
           <br><br>
           <span class="important-text">What is it?</span> 
           A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.<br> The project link below is a write up by the UX Designer I worked with for this project.
@@ -192,11 +192,31 @@
   <hr>
   <section>
     <h1>Contact</h1>
-    <p>jackson_duhon@yahoo.com</p>
-    <a href="https://github.com/shway250"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
-    <a href="#"><i class="fa fa-4x fa-file-text" aria-hidden="true"></i></a>
-    <a href="https://www.linkedin.com/in/jackson-duhon/"><i class="fa fa-4x fa-linkedin-square" aria-hidden="true"></i>
-</a>
+    <div class="contact-div">
+      <div style="display: inline-block;">
+        <a href="https://github.com/shway250"><i class="fa fa-5x fa-github-square contact-link" aria-hidden="true"></i>
+          <p>Github</p>
+        </a>
+      </div>
+      <div style="display: inline-block;">
+        <a href="jackson_duhon@yahoo.com"><i class="fa fa-5x fa-envelope contact-link" aria-hidden="true"></i>
+          <p>Email</p>
+        </a>
+      </div>
+      <div style="display: inline-block;">
+        <a href="#"><i class="fa fa-5x fa-file-text contact-link" aria-hidden="true"></i>
+          <p>Resume</p>
+        </a>
+      </div>
+      <div style="display: inline-block;">
+        <a href="https://www.linkedin.com/in/jackson-duhon/"><i class="fa fa-5x fa-linkedin-square contact-link" aria-hidden="true"></i>
+          <p>LinkedIn</p>
+        </a>
+      </div>
+      
+      
+  </a>
+    </div>
   </section>
 </body>
 </html>
