--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="https://miguelapou.github.io/Euclid/" target="_blank">
           <img class="laptop" alt="the Euclid interface" src="./imgs/euclid.png">
         </a>
-        <p class="project-desc">
+        <div class="project-desc">
           <span class="important-text">Contributors:</span> 
           Miguel Pou
           <br><br>
@@ -54,9 +54,19 @@
           <span class="important-text">My role:</span>
           Sound Design, Sound Sythesis, Instrument Design.
           <br><br>
-          <a href="https://miguelapou.github.io/Euclid/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
-          <a href="https://github.com/shway250/Euclid"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
-        </p>
+          <div class="fa-div">
+            <a href="https://miguelapou.github.io/Euclid/">
+              <i class="fa fa-4x fa-code" aria-hidden="true"></i>
+              <p>Live Site</p>
+            </a>
+          </div>
+          <div class="fa-div">
+            <a href="https://github.com/shway250/Euclid">
+              <i class="fa fa-4x fa-github" aria-hidden="true"></i>
+              <p>Github Repo</p>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <section id="project5">
@@ -65,12 +75,12 @@
         <a href="http://bestuxdesignerever.com/cs_calpal.html" target="_blank">
           <img class="laptop" alt="Cal Pal Icon" src="./imgs/cp_casestudy.png">
         </a>
-        <p class="project-desc">
+        <div class="project-desc">
           <span class="important-text">Contributors:</span> 
           Annelisse Smith, Reno McKenzie
           <br><br>
           <span class="important-text">What is it?</span> 
-          A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.<br> The project link below is a write up by the UX Designer I worked with for this project.
+          A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.
           <br><br>
           <span class="important-text">Technologies:</span> 
           Node.js, AWS
@@ -78,9 +88,13 @@
           <span class="important-text">My role:</span>
           Backend developement, Natural Language Processing
           <br><br>
-          <a href="http://bestuxdesignerever.com/cs_calpal.html"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
-          <!-- <a href="#"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a> -->
-        </p>
+          <div class="fa-div">
+            <a href="http://bestuxdesignerever.com/cs_calpal.html">
+              <i class="fa fa-4x fa-code" aria-hidden="true"></i>
+              <p>Live Site</p>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <section id="project2">
@@ -89,7 +103,7 @@
         <a href="http://artemistracker.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Artemis Front Page" src="./imgs/artemis.png">
         </a>
-        <p class="project-desc">
+        <div class="project-desc">
           <span class="important-text">Contributors:</span> 
           Miguel Pou, Leo Burke, Kemal Degar
           <br><br>
@@ -102,9 +116,19 @@
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Controllers, Deployment.
           <br><br>
-          <a href="http://artemistracker.herokuapp.com/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
-          <a href="https://github.com/shway250/artemis"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
-        </p>
+          <div class="fa-div">
+            <a href="http://artemistracker.herokuapp.com/">
+              <i class="fa fa-4x fa-code" aria-hidden="true"></i>
+              <p>Live Site</p>
+            </a>
+          </div>
+          <div class="fa-div">
+            <a href="https://github.com/shway250/artemis">
+              <i class="fa fa-4x fa-github" aria-hidden="true"></i>
+              <p>Github Repo</p>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <section id="project3">
@@ -113,7 +137,7 @@
         <a href="https://accio-bike.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
         </a>
-        <p class="project-desc">
+        <div class="project-desc">
           <span class="important-text">Contributors:</span> 
           Zoe, Kemal, Chris
           <br><br>
@@ -126,9 +150,19 @@
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Web Scraping.
           <br><br>
-          <a href="https://accio-bike.herokuapp.com/"><i class="fa fa-4x fa-code" aria-hidden="true"></i></a>
-          <a href="https://github.com/shway250/acciobike2"><i class="fa fa-4x fa-github" aria-hidden="true"></i></a>
-        </p>
+          <div class="fa-div">
+            <a href="https://accio-bike.herokuapp.com/">
+              <i class="fa fa-4x fa-code" aria-hidden="true"></i>
+              <p>Live Site</p>
+            </a>
+          </div>
+          <div class="fa-div">
+            <a href="https://github.com/shway250/acciobike2">
+              <i class="fa fa-4x fa-github" aria-hidden="true"></i>
+              <p>Github Repo</p>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
     <section id="project4">
@@ -137,7 +171,7 @@
         <a href="https://codepen.io/shway250/" target="_blank">
           <img class="laptop" alt="I ain't got no face" src="./imgs/headless-profile-pic.png">
         </a>
-        <p class="project-desc">
+        <div class="project-desc">
           <span class="important-text">What is it?</span> 
           This is my Code Pen. It's where I doodle out ideas and keep some of my animations.
           <br><br>
@@ -145,10 +179,13 @@
           I mostly do canvas animations in Code Pen.
           <br><br>
           <br><br>
-          <a href="https://codepen.io/shway250/"><i class="fa fa-4x fa-codepen" aria-hidden="true"></i>
-</a>
-          
-        </p>
+          <div class="fa-div">
+            <a href="https://codepen.io/shway250/">
+              <i class="fa fa-4x fa-codepen" aria-hidden="true"></i>
+              <p>Codepen Profile</p>
+            </a>
+          </div> 
+        </div>
       </div>
     </section>
   </section>
@@ -193,22 +230,22 @@
   <section>
     <h1>Contact</h1>
     <div class="contact-div">
-      <div style="display: inline-block;">
+      <div class="fa-div">
         <a href="https://github.com/shway250"><i class="fa fa-5x fa-github-square contact-link" aria-hidden="true"></i>
           <p>Github</p>
         </a>
       </div>
-      <div style="display: inline-block;">
+      <div class="fa-div">
         <a href="jackson_duhon@yahoo.com"><i class="fa fa-5x fa-envelope contact-link" aria-hidden="true"></i>
           <p>Email</p>
         </a>
       </div>
-      <div style="display: inline-block;">
+      <div class="fa-div">
         <a href="#"><i class="fa fa-5x fa-file-text contact-link" aria-hidden="true"></i>
           <p>Resume</p>
         </a>
       </div>
-      <div style="display: inline-block;">
+      <div class="fa-div">
         <a href="https://www.linkedin.com/in/jackson-duhon/"><i class="fa fa-5x fa-linkedin-square contact-link" aria-hidden="true"></i>
           <p>LinkedIn</p>
         </a>
