--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="fa-div">
             <a href="https://miguelapou.github.io/Euclid/">
               <i class="fa fa-4x fa-code" aria-hidden="true"></i>
-              <p>Live Site</p>
+              <p>Live Sit</p>
             </a>
           </div>
           <div class="fa-div">
