--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Jackson Duhon</title>
-<link href="https://fonts.googleapis.com/css?family=Lato:400,900|Oswald:400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Oswald:400,600" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="libraries/p5.js" type="text/javascript"></script> <!-- P5 script -->
   <script src="https://use.fontawesome.com/68798e7039.js"></script><!-- Font Awesome Script -->
@@ -13,7 +13,7 @@
   <div id="myContainer"></div>
   <header>
     <ul>
-      <li><a class="white-text spaced" href="#">Home</a></li>
+      <li><a class="white-text spaced" href="http://www.jacksonduhon.com">Home</a></li>
       <li><a class="white-text spaced" href="#">Projects</a></li>
       <li><a class="white-text spaced" href="#">Resume</a></li>
       <li><a class="white-text spaced" href="#">Contact</a></li>
@@ -57,7 +57,7 @@
           <div class="fa-div">
             <a href="https://miguelapou.github.io/Euclid/">
               <i class="fa fa-4x fa-code" aria-hidden="true"></i>
-              <p>Live Sit</p>
+              <p>Live Site</p>
             </a>
           </div>
           <div class="fa-div">
@@ -249,11 +249,13 @@
         <a href="https://www.linkedin.com/in/jackson-duhon/"><i class="fa fa-5x fa-linkedin-square contact-link" aria-hidden="true"></i>
           <p>LinkedIn</p>
         </a>
-      </div>
-      
-      
-  </a>
+      </div>  
     </div>
   </section>
+  <footer>
+    <ul>
+      <li>Copyright Jackson Duhon</li>
+    </ul>
+  </footer>
 </body>
 </html>
