added some font sizing for responsive design

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <h1>Skills</h1>
     <div class="skillz-div circle">
       <span class="important-text list-text">Front End</span> 
-          <ul>
+          <ul class="skills-list">
             <li>HTML5</li>
             <li>CSS3</li>
             <li>Javascript</li>
@@ -205,7 +205,7 @@
     </div>
     <div class="skillz-div circle">
       <span class="important-text list-text">Back End</span> 
-          <ul>
+          <ul class="skills-list">
             <li>NodeJS</li>
             <li>Ruby on Rails</li>
             <li>Meteor</li>
@@ -216,13 +216,13 @@
     </div>
     <div class="skillz-div circle">
       <span class="important-text list-text">Misc</span> 
-          <ul>
+          <ul class="skills-list">
             <li>P5.js</li>
             <li>RESTful APIs</li>
             <li>AJAX</li>
             <li>Web Scraping</li>
-            <li>Sound Synthesis</li>
             <li>Audio Engineering</li>
+            <li>Sound Synthesis</li>
           </ul>
     </div>
   </section>
