added brackets and rearranged skills list

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </header>
   <div id="titleDiv">
     <h1 class="white-text title">Jackson Duhon</h1>
-    <h2 class="white-text title">Web Developer<br>and<br>Digital Artist</h2>
+    <h2 class="white-text title">[Web Developer]<br>and<br>[Digital Artist]</h2>
   </div>
   <section class="about">
-    <h1>About Me</h1>
+    <h1>[About Me]</h1>
     <div id="borderbox">
       <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
@@ -34,7 +34,7 @@
   </section>
   <hr>
   <section id="projects-section">
-    <h1>Projects</h1>
+    <h1>[Projects]</h1>
     <section id="project1">
       <div class="project">
         <h2>Euclid</h2>
@@ -46,7 +46,7 @@
           Miguel Pou
           <br><br>
           <span class="important-text">What is it?</span> 
-          A front end <a href="https://en.wikipedia.org/wiki/Frequency_modulation_synthesis">FM Synthesizer</a> Allows the user to create generative compositions using just the browser.
+          An <a href="https://en.wikipedia.org/wiki/Frequency_modulation_synthesis">FM Synthesizer</a> that allows the user to create generative compositions.
           <br><br>
           <span class="important-text">Technologies:</span> 
           HTML, CSS, Javascript, Web Audio API, <a href="https://p5js.org/">P5.js</a>
@@ -191,7 +191,7 @@
   </section>
   <hr>
   <section id="skillz-section">
-    <h1>Skills</h1>
+    <h1>[Skills]</h1>
     <div class="skillz-div circle">
       <span class="important-text list-text">Front End</span> 
           <ul class="skills-list">
@@ -217,18 +217,18 @@
     <div class="skillz-div circle">
       <span class="important-text list-text">Misc</span> 
           <ul class="skills-list">
-            <li>P5.js</li>
             <li>RESTful APIs</li>
             <li>AJAX</li>
             <li>Web Scraping</li>
             <li>Audio Engineering</li>
             <li>Sound Synthesis</li>
+            <li>P5.js</li>
           </ul>
     </div>
   </section>
   <hr>
   <section>
-    <h1>Contact</h1>
+    <h1>[Contact]</h1>
     <div class="contact-div">
       <div class="fa-div">
         <a href="https://github.com/shway250"><i class="fa fa-5x fa-github-square contact-link" aria-hidden="true"></i>
