--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
   </section>
   <footer>
     <ul>
-      <li>Copyright Jackson Duhon</li>
+      <li>&copy; 2017 Jackson Duhon. All rights reserved.</li>
     </ul>
   </footer>
 </body>
