--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   <script src="script.js" type="text/javascript"></script>
 </head>
 <body>
+  <a id="linktotop"></a>
   <div id="myContainer"></div>
   <header>
     <ul>
-      <li><a class="white-text spaced" href="http://www.jacksonduhon.com">Home</a></li>
-      <li><a class="white-text spaced" href="#">Projects</a></li>
-      <li><a class="white-text spaced" href="#">Resume</a></li>
-      <li><a class="white-text spaced" href="#">Contact</a></li>
+      <li><a style="color:white;" class="white-text spaced" href="#linktotop">Home</a></li>
+      <li><a style="color:white;" class="white-text spaced" href="#linktoprojects">Projects</a></li>
+      <li><a style="color:white;" class="white-text spaced" href="#">Resume</a></li>
+      <li><a style="color:white;" class="white-text spaced" href="#linktocontact">Contact</a></li>
     </ul>
   </header>
   <div id="titleDiv">
@@ -34,6 +35,7 @@
   </section>
   <hr>
   <section id="projects-section">
+    <a id="linktoprojects"></a>
     <h1>[Projects]</h1>
     <section id="project1">
       <div class="project">
@@ -229,6 +231,7 @@
   <hr>
   <section>
     <h1>[Contact]</h1>
+    <a id="linktocontact"></a>
     <div class="contact-div">
       <div class="fa-div">
         <a href="https://github.com/shway250"><i class="fa fa-5x fa-github-square contact-link" aria-hidden="true"></i>
