--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Jackson Duhon</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Oswald:400,600" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>  
   <script src="libraries/p5.js" type="text/javascript"></script> <!-- P5 script -->
   <script src="https://use.fontawesome.com/68798e7039.js"></script><!-- Font Awesome Script -->
   <script src="script.js" type="text/javascript"></script>
@@ -260,5 +261,6 @@
       <li>&copy; 2017 Jackson Duhon. All rights reserved.</li>
     </ul>
   </footer>
+  <script src="scrollscript.js" type="text/javascript"></script>
 </body>
 </html>
