added resume link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul>
       <li><a style="color:white;" class="white-text spaced" href="#linktotop">Home</a></li>
       <li><a style="color:white;" class="white-text spaced" href="#linktoprojects">Projects</a></li>
-      <li><a style="color:white;" class="white-text spaced" href="#">Resume</a></li>
+      <li><a style="color:white;" class="white-text spaced" href="./imgs/Jackson_Duhon_Technical_Resume.pdf" target="_blank">Resume</a></li>
       <li><a style="color:white;" class="white-text spaced" href="#linktocontact">Contact</a></li>
     </ul>
   </header>
@@ -245,7 +245,7 @@
         </a>
       </div>
       <div class="fa-div">
-        <a href="#"><i class="fa fa-5x fa-file-text contact-link" aria-hidden="true"></i>
+        <a href="./imgs/Jackson_Duhon_Technical_Resume.pdf" target="_blank"><i class="fa fa-5x fa-file-text contact-link" aria-hidden="true"></i>
           <p>Resume</p>
         </a>
       </div>
