added last background image

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           A full stack web application for storing information about your bike <br>and web crawling through Craigslist to help find it if it is stolen.
           <br><br>
           <span class="important-text">Technologies:</span> 
-          Ruby on Rails, PostgresQL, Nokogiri
+          Ruby on Rails, PostgreSQL, Nokogiri
           <br><br>
           <span class="important-text">My role:</span>
           Authentication, Authorization, Models, Web Scraping.
