--- a/index.html
+++ b/index.html
@@ -137,10 +137,13 @@
     <section id="project3">
       <div class="project">
         <h2>Accio-Bike</h2>
+        <div class="project-desc">
+        
         <a href="https://accio-bike.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
         </a>
-        <div class="project-desc">
+        
+        <!-- <div class="project-desc"> -->
           <span class="important-text">Contributors:</span> 
           Zoe, Kemal, Chris
           <br><br>
