accio bike is in a div, needs to make margin good, then we're done son

--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
       <div class="project">
         <h2>Accio-Bike</h2>
         <div class="project-desc">
-        
+        <div style="display: inline-block;">
         <a href="https://accio-bike.herokuapp.com/" target="_blank">
           <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
         </a>
+        </div>
         
         <!-- <div class="project-desc"> -->
+        <div style="display: inline-block;">
           <span class="important-text">Contributors:</span> 
           Zoe, Kemal, Chris
           <br><br>
