added faded background to every project

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
     <section id="project1">
       <div class="project">
         <h2>Euclid</h2>
-        <a href="https://miguelapou.github.io/Euclid/" target="_blank">
-          <img class="laptop" alt="the Euclid interface" src="./imgs/euclid.png">
-        </a>
         <div class="project-desc">
+          <div class="image-div">
+            <a href="https://miguelapou.github.io/Euclid/" target="_blank">
+              <img class="laptop" alt="the Euclid interface" src="./imgs/euclid.png">
+            </a>
+          </div>
+        <div class="project-div">
           <span class="important-text">Contributors:</span> 
           Miguel Pou
           <br><br>
@@ -75,38 +78,44 @@
     <section id="project5">
       <div class="project">
         <h2>Cal Pal</h2>
-        <a href="http://bestuxdesignerever.com/cs_calpal.html" target="_blank">
-          <img class="laptop" alt="Cal Pal Icon" src="./imgs/cp_casestudy.png">
-        </a>
         <div class="project-desc">
-          <span class="important-text">Contributors:</span> 
-          Annelisse Smith, Reno McKenzie
-          <br><br>
-          <span class="important-text">What is it?</span> 
-          A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.
-          <br><br>
-          <span class="important-text">Technologies:</span> 
-          Node.js, AWS
-          <br><br>
-          <span class="important-text">My role:</span>
-          Backend developement, Natural Language Processing
-          <br><br>
-          <div class="fa-div">
-            <a href="http://bestuxdesignerever.com/cs_calpal.html">
-              <i class="fa fa-4x fa-code" aria-hidden="true"></i>
-              <p>Live Site</p>
+          <div class="image-div">
+            <a href="http://bestuxdesignerever.com/cs_calpal.html" target="_blank">
+              <img class="laptop" alt="Cal Pal Icon" src="./imgs/cp_casestudy.png">
             </a>
           </div>
-        </div>
+          <div class="project-div">
+            <span class="important-text">Contributors:</span> 
+            Annelisse Smith, Reno McKenzie
+            <br><br>
+            <span class="important-text">What is it?</span> 
+            A deployed Alexa app that helps you make good nutritional decisions. <br>Won first place in the General Assembly Amazon Alexa Hackathon.
+            <br><br>
+            <span class="important-text">Technologies:</span> 
+            Node.js, AWS
+            <br><br>
+            <span class="important-text">My role:</span>
+            Backend developement, Natural Language Processing
+            <br><br>
+            <div class="fa-div">
+              <a href="http://bestuxdesignerever.com/cs_calpal.html">
+                <i class="fa fa-4x fa-code" aria-hidden="true"></i>
+                <p>Live Site</p>
+              </a>
+            </div>
+          </div>
       </div>
     </section>
     <section id="project2">
       <div class="project">
         <h2>Artemis</h2>
-        <a href="http://artemistracker.herokuapp.com/" target="_blank">
-          <img class="laptop" alt="Artemis Front Page" src="./imgs/artemis.png">
-        </a>
         <div class="project-desc">
+          <div class="image-div">
+            <a href="http://artemistracker.herokuapp.com/" target="_blank">
+              <img class="laptop" alt="Artemis Front Page" src="./imgs/artemis.png">
+            </a>
+          </div>
+        <div class="project-div">
           <span class="important-text">Contributors:</span> 
           Miguel Pou, Leo Burke, Kemal Degar
           <br><br>
@@ -138,14 +147,12 @@
       <div class="project">
         <h2>Accio-Bike</h2>
         <div class="project-desc">
-        <div style="display: inline-block;">
-        <a href="https://accio-bike.herokuapp.com/" target="_blank">
-          <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
-        </a>
-        </div>
-        
-        <!-- <div class="project-desc"> -->
-        <div style="display: inline-block;">
+          <div class="image-div">
+            <a href="https://accio-bike.herokuapp.com/" target="_blank">
+              <img class="laptop" alt="Accio-Bike SVG animation" src="./imgs/accio-bike.png">
+            </a>
+          </div>
+        <div class="project-div">
           <span class="important-text">Contributors:</span> 
           Zoe, Kemal, Chris
           <br><br>
@@ -176,10 +183,13 @@
     <section id="project4">
       <div class="project">
         <h2>Code Pen</h2>
-        <a href="https://codepen.io/shway250/" target="_blank">
-          <img class="laptop" alt="I ain't got no face" src="./imgs/headless-profile-pic.png">
-        </a>
         <div class="project-desc">
+          <div class="image-div">
+            <a href="https://codepen.io/shway250/" target="_blank">
+              <img class="laptop" alt="I ain't got no face" src="./imgs/headless-profile-pic.png">
+            </a>
+          </div>
+        <div class="project-div">
           <span class="important-text">What is it?</span> 
           This is my Code Pen. It's where I doodle out ideas and keep some of my animations.
           <br><br>
