fixed soe bidness

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
     <article id="profiletext">
-      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can eat food from the sea whenever I’m not building cool stuff with computers.</p>
+      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can stare at the gum wall whenever I’m not building cool stuff with computers.</p>
     </article>
   </section>
   <hr>
@@ -78,7 +78,7 @@
     <section id="project5">
       <div class="project">
         <h2>Cal Pal</h2>
-        <div class="project-desc">
+        <div class="project-desc2">
           <div class="image-div">
             <a href="http://bestuxdesignerever.com/cs_calpal.html" target="_blank">
               <img class="laptop" alt="Cal Pal Icon" src="./imgs/cp_casestudy.png">
@@ -235,8 +235,8 @@
     <div class="skillz-div circle">
       <span class="important-text list-text">Misc</span> 
           <ul class="skills-list">
-            <li>RESTful APIs</li>
             <li>AJAX</li>
+            <li>RESTful APIs</li>
             <li>Web Scraping</li>
             <li>Audio Engineering</li>
             <li>Sound Synthesis</li>
