--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
     <article id="profiletext">
-      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can gistare at the gum wall whenever I’m not building cool stuff with computers.</p>
+      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can stare at the gum wall whenever I’m not building cool stuff with computers.</p>
     </article>
   </section>
   <hr>
