--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Jackson Duhon</title>
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900|Oswald:400,600" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js" type="text/javascript"></script>  
@@ -31,7 +32,7 @@
       <img id="profilepic" src="imgs/profilepic.jpg">
     </div>
     <article id="profiletext">
-      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX; where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can stare at the gum wall whenever I’m not building cool stuff with computers.</p>
+      <p>I'm a full-stack web developer and digital artist with a background in music technology and performance. I grew up in Austin, TX, where the days are as long as the tacos are delicious, and Willie Nelson roams the streets singing songs about cowboys he's never met. Now I reside in Seattle so that I can stare at the gum wall whenever I’m not building cool stuff with computers.</p>
     </article>
   </section>
   <hr>
