added mailto link

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
         </a>
       </div>
       <div class="fa-div">
-        <a href="jackson_duhon@yahoo.com"><i class="fa fa-5x fa-envelope contact-link" aria-hidden="true"></i>
+        <a href="mailto:jackson_duhon@yahoo.com"><i class="fa fa-5x fa-envelope contact-link" aria-hidden="true"></i>
           <p>Email</p>
         </a>
       </div>
